// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Menu /> should render when positioned to Right: Closed Menu 1`] = `
.c0 {
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border: 1px solid #E0E0E0;
  border-radius: 5px;
  min-width: 140px;
  padding: 12px 15px;
}

.c0:hover {
  box-shadow: 0 0 0 2px #CBBEE7;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #CBBEE7;
}

.c0:active,
.c0[data-active=true] {
  box-shadow: 0 0 0 2px #CBBEE7;
}

.c0:disabled,
.c0:disabled:focus,
.c0:disabled:hover,
.c0[aria-disabled=true],
.c0[aria-disabled=true]:focus,
.c0[aria-disabled=true]:hover {
  background: #E0E0E0;
  color: rgba(30,6,84,0.5);
}

<div>
  <button
    aria-controls="menu--7"
    aria-haspopup="true"
    class="c0"
    data-reach-menu-button=""
    data-testid="menu-button"
    id="menu-button--menu--7"
    type="button"
  >
    Actions 
  </button>
</div>
`;

exports[`<Menu /> should render when positioned to Right: Open Menu 1`] = `
<div>
  <button
    aria-controls="menu--7"
    aria-haspopup="true"
    class="sc-bkbkJK bjgAvd"
    data-reach-menu-button=""
    data-testid="menu-button"
    id="menu-button--menu--7"
    type="button"
  >
    Actions 
  </button>
</div>
`;

exports[`<Menu /> should render: Closed Menu 1`] = `
.c0 {
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border: 1px solid #E0E0E0;
  border-radius: 5px;
  min-width: 140px;
  padding: 12px 15px;
}

.c0:hover {
  box-shadow: 0 0 0 2px #CBBEE7;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #CBBEE7;
}

.c0:active,
.c0[data-active=true] {
  box-shadow: 0 0 0 2px #CBBEE7;
}

.c0:disabled,
.c0:disabled:focus,
.c0:disabled:hover,
.c0[aria-disabled=true],
.c0[aria-disabled=true]:focus,
.c0[aria-disabled=true]:hover {
  background: #E0E0E0;
  color: rgba(30,6,84,0.5);
}

<div>
  <button
    aria-controls="menu--1"
    aria-haspopup="true"
    class="c0"
    data-reach-menu-button=""
    data-testid="menu-button"
    id="menu-button--menu--1"
    type="button"
  >
    Actions 
  </button>
</div>
`;

exports[`<Menu /> should render: Open Menu 1`] = `
<div>
  <button
    aria-controls="menu--1"
    aria-haspopup="true"
    class="sc-bkbkJK bjgAvd"
    data-reach-menu-button=""
    data-testid="menu-button"
    id="menu-button--menu--1"
    type="button"
  >
    Actions 
  </button>
</div>
`;
